# r2x-pypsa

./: .gitignore  PYPSA_TO_SIENNA.md  README.md  pyproject.toml  test_output.json  time_series_storage.h5
examples/: README.md  convert_pypsa_to_sienna.py
notebooks/: Pypsa Parser EDA.ipynb
src/r2x_pypsa/: parser.py
src/r2x_pypsa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/r2x_pypsa/models/: __init__.py  bus.py  generator.py  line.py  link.py  load.py  property_values.py  storage_unit.py  store.py
src/r2x_pypsa/serialization/: api.py  cost_models.py  pypsa_to_psy.py  utils.py
tests/: conftest.py  test_documentation_examples.py  test_models.py  test_parser.py  test_psy_serialization.py
