[project]
name = "r2x-pypsa"
version = "0.1.0"
description = "PyPSA to R2X parser and converter"
readme = "README.md"
dependencies = [
    "r2x>=1.1.0",
    "pypsa==0.35.2",
    "pandas",
    "loguru"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.uv.sources]
r2x = { git = "https://github.com/NREL/r2x", branch = "v2.0.0" }

[tool.pytest.ini_options]
pythonpath = [
  "src"
]